[package]
name = "cmtn"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-008: The Civilization Layer. Multi-tenant social protocols, 128-bit atomic diplomacy, and judicial order for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://cmtn.com"
repository = "http://github.com/Aicent-Stack/cmtn"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Civilization builds upon social masks and identity DNA.
# Requiring the Soul (RFC-000) and Persona (RFC-007) for judicial standing.
epoekie = { version = "1.2.2-alpha" }
bewho   = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit diplomatic pulses, tenant contracts, and records.
serde = { version = "1.0", features = ["derive"] }

# Required for async diplomatic settlement and the 10ms Diplomatic Friction tax.
# Supports the social scale concurrency of the Aicent Empire.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Civilization logic WILL 
# be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables the multi-tenant isolation and propagates features across the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "bewho/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Pulse IDs, Expiry timestamps, Census).
# Chronos: 2026 Imperial Calendar Aligned.
